[gd_scene load_steps=11 format=3 uid="uid://jnc4cr2mhg00"]

[ext_resource type="Script" uid="uid://dhrj6aw08a5o0" path="res://in_game_hdr_settings.gd" id="1_4pceo"]
[ext_resource type="Shader" uid="uid://dkw23nbjt2nmi" path="res://colour.gdshader" id="2_bec2s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1yfns"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(1, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_4pceo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bec2s"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aew60"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5qn52"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5x653"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i4628"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wc80b"]
shader = ExtResource("2_bec2s")
shader_parameter/colour = Vector3(0, 0, 0)

[node name="InGameHDRSettings" type="VBoxContainer"]
offset_right = 237.0
offset_bottom = 289.0
script = ExtResource("1_4pceo")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Player-facing in-game settings:"

[node name="HDRCheckButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "HDR"

[node name="HDROptions" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="HDROptions"]
custom_minimum_size = Vector2(28.31, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HDROptions"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HDROptions/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HDROptions/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessLabel" type="Label" parent="HDROptions/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "200"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HDROptions/VBoxContainer"]
layout_mode = 2

[node name="BrightnessSlider" type="HSlider" parent="HDROptions/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 200.0
rounded = true

[node name="ResetBrightness" type="Button" parent="HDROptions/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="HBoxContainer2" type="HBoxContainer" parent="HDROptions/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HDROptions/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Max luminance"

[node name="MaxLumLabel" type="Label" parent="HDROptions/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HDROptions/VBoxContainer"]
layout_mode = 2

[node name="MaxLumSlider" type="HSlider" parent="HDROptions/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(204, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 200.0
max_value = 2000.0
step = 10.0
value = 1000.0
rounded = true

[node name="ResetMaxLum" type="Button" parent="HDROptions/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="Control" type="Control" parent="HDROptions/VBoxContainer"]
custom_minimum_size = Vector2(0, 108.885)
layout_mode = 2

[node name="MaxLumAdjustBacking" type="MeshInstance2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1yfns")
position = Vector2(58, 54)
scale = Vector2(100, 100)
mesh = SubResource("QuadMesh_4pceo")

[node name="MaxLumAdjustBelow" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_bec2s")
position = Vector2(58, 21.5)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="MaxLumAdjustBacking2" type="MeshInstance2D" parent="HDROptions/VBoxContainer/Control"]
material = SubResource("ShaderMaterial_1yfns")
position = Vector2(191, 54.000015)
scale = Vector2(100, 100)
mesh = SubResource("QuadMesh_4pceo")

[node name="MaxLumAdjustAbove" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_aew60")
position = Vector2(191.00002, 21.5)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="MaxLumAdjustBelow2" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5qn52")
position = Vector2(58, 54.499985)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="MaxLumAdjustAbove2" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5x653")
position = Vector2(191.00002, 54.499985)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="MaxLumAdjustBelow3" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_i4628")
position = Vector2(58, 87.499985)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="MaxLumAdjustAbove3" type="Polygon2D" parent="HDROptions/VBoxContainer/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_wc80b")
position = Vector2(191.00002, 87.499985)
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -0.5, 0.5, 0.5, -0.5, 0.5)

[node name="Label2" type="Label" parent="HDROptions/VBoxContainer"]
layout_mode = 2
text = "Adjust Max luminance to make
the three triangles on the left
visible and the right invisible."

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Save"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="HDRCheckButton" to="." method="_on_hdr_check_button_toggled"]
[connection signal="drag_started" from="HDROptions/VBoxContainer/HBoxContainer3/BrightnessSlider" to="." method="_on_brightness_slider_drag_started"]
[connection signal="value_changed" from="HDROptions/VBoxContainer/HBoxContainer3/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="pressed" from="HDROptions/VBoxContainer/HBoxContainer3/ResetBrightness" to="." method="_on_reset_brightness_pressed"]
[connection signal="drag_started" from="HDROptions/VBoxContainer/HBoxContainer4/MaxLumSlider" to="." method="_on_max_lum_slider_drag_started"]
[connection signal="value_changed" from="HDROptions/VBoxContainer/HBoxContainer4/MaxLumSlider" to="." method="_on_max_lum_slider_value_changed"]
[connection signal="pressed" from="HDROptions/VBoxContainer/HBoxContainer4/ResetMaxLum" to="." method="_on_reset_max_lum_pressed"]
[connection signal="pressed" from="Button" to="." method="save_settings"]
